projects/compiler/test/parser/import_error_list_first_nonident.out
Error at %FILE_NAME%:1:8
Unexpected token 'int', expected one of 'string', 'identifier':
  |  import 1, b from "./abc"
            ^