projects/compiler/test/parser/import_error_list_first_nonident.abra
import 1, b from "./abc"